experiments/Set-005/X-002/files/pytest001/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 27221 0.0.0.0/0 any 0.0.0.0/0 in_ens3
-A ufw-user-input -i ens3 -p tcp --dport 27221 -j ACCEPT
### tuple ### allow tcp 3142 0.0.0.0/0 any 0.0.0.0/0 in_ens4
-A ufw-user-input -i ens4 -p tcp --dport 3142 -j ACCEPT
### tuple ### allow udp 53 0.0.0.0/0 any 0.0.0.0/0 in_ens4
-A ufw-user-input -i ens4 -p udp --dport 53 -j ACCEPT
### tuple ### allow tcp 53 0.0.0.0/0 any 0.0.0.0/0 in_ens4
-A ufw-user-input -i ens4 -p tcp --dport 53 -j ACCEPT
### tuple ### allow udp 123 0.0.0.0/0 any 0.0.0.0/0 in_ens4
-A ufw-user-input -i ens4 -p udp --dport 123 -j ACCEPT
### tuple ### allow tcp 8200 0.0.0.0/0 any 10.0.0.0/16 in_ens4
-A ufw-user-input -i ens4 -p tcp --dport 8200 -s 10.0.0.0/16 -j ACCEPT
### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 in_wg0
-A ufw-user-input -i wg0 -p tcp --dport 53 -j ACCEPT
-A ufw-user-input -i wg0 -p udp --dport 53 -j ACCEPT
### tuple ### allow udp 67 0.0.0.0/0 any 0.0.0.0/0 in_ens4
-A ufw-user-input -i ens4 -p udp --dport 67 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
